Fixing slash unordered list z-index.

--- a/scss/mixins/_wvu-slash.scss
+++ b/scss/mixins/_wvu-slash.scss
@@ -72,6 +72,7 @@
   li {
     display: block $is-important;
     position: relative $is-important;
+    z-index: 0 $is-important;
     &:before {
       background-color: $color $is-important;
       content: '' $is-important;
